# django-s3-upload

./: .env  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  settings.py  setup.py  tox.ini
.github/workflows/: tox.yml
example/: apps.py
example/cat/: forms.py
example/example/: settings.py
example/migrations/: 0001_initial.py
s3upload/: apps.py  fields.py  tests.py  urls.py  utils.py  views.py  widgets.py
s3upload/src/: package-lock.json
s3upload/static/s3upload/js/: django-s3-uploads.js  django-s3-uploads.min.js
s3upload/templates/s3upload/: s3upload-widget.tpl
tests/: settings.py  test_utils.py  test_widgets.py
