[tool.poetry]
name = "django-s3-upload"
version = "1.0"
description = "Integrates direct client-side uploading to s3 with Django."
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-s3-upload"
repository = "https://github.com/yunojuno/django-s3-upload"
documentation = "https://github.com/yunojuno/django-s3-upload"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "s3upload" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2 || ^4.0 || ^5.0"
boto3 = "^1.14"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
